--- a/k8s/environments/sbox/cluster-00-overlay/kustomization.yaml
+++ b/k8s/environments/sbox/cluster-00-overlay/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
 - ../../../release/admin/kube-slack
-#- ../../../release/admin/traefik
+- ../../../release/admin/traefik
 - ../../../release/admin/kured
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
@@ -13,7 +13,7 @@ patchesStrategicMerge:
 - ../../../release/admin/kube-slack/patches/sbox/cluster-00/kube-slack.yaml
 
 #traefik patch
-# - ../../../release/admin/traefik/patches/sbox/cluster-00/traefik.yaml
+- ../../../release/admin/traefik/patches/sbox/cluster-00/traefik.yaml
 
 #kured patch
 - ../../../release/admin/kured/patches/sbox/cluster-00/kured.yaml
