enable self signed cert

--- a/k8s/release/admin/traefik/patches/sbox/cluster-00/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/sbox/cluster-00/traefik.yaml
@@ -16,4 +16,6 @@ spec:
     service:
       annotations:
         service.beta.kubernetes.io/azure-load-balancer-resource-group: aks-infra-sbox-rg
-
+    ssl:
+      generateTLS: true
+      defaultCN: "*.service.core-compute-sandbox.internal"
