--- a/k8s/release/admin/traefik/patches/sbox/cluster-01/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/sbox/cluster-01/traefik.yaml
@@ -9,7 +9,7 @@ spec:
   values:
     loadBalancerIP: 10.150.15.250
     dashboard:
-      domain: traefik01.service.core-compute-sandbox.internal
+      domain: traefik01.ss-service.core-compute-sandbox.internal
     accessLogs:
       enabled: true
     autoscaling:
@@ -20,4 +20,4 @@ spec:
         service.beta.kubernetes.io/azure-load-balancer-resource-group: ss_sbox_kubernetes_resource_group
     ssl:
       generateTLS: true
-      defaultCN: "*.service.core-compute-sandbox.internal"
+      defaultCN: "*.ss-service.core-compute-sandbox.internal"
