--- a/k8s/environments/sbox/common/mi/mi-house-keeping-service.yaml
+++ b/k8s/environments/sbox/common/mi/mi-house-keeping-service.yaml
@@ -2,33 +2,31 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: data-extractor-job
+  name: mi-house-keeping-service
   namespace: mi
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.job: glob:pr-*
+    flux.weave.works/tag.job: glob:sbox-*
 spec:
-  releaseName: data-extractor
+  releaseName: mi-house-keeping-service-job
   chart:
     git: git@github.com:hmcts/shared-services-flux
-    path: k8s/sbox/charts/mi-data-extractor-job
+    path: k8s/release/mi/mi-house-keeping-service
     ref: master
   values:
     job:
-      image: ssprivatesbox.azurecr.io/data-extractor-job:pr-113-3d24ff2
+      image: ssprivatesbox.azurecr.io/mi-house-keeping-service:sbox-76596b6
       suspend: true
       kind: CronJob
-      schedule: '0 * * * *'
+      schedule: '45 * * * *'
       labels:
-        app.kubernetes.io/instance: data-extractor-job
-        app.kubernetes.io/name: data-extractor-job
+        app.kubernetes.io/instance: mi-house-keeping-service
+        app.kubernetes.io/name: mi-house-keeping-service
       environment:
-        ETL_MSICLIENTID: 8dbd1e5c-15b7-42ea-b32c-4a360c79210a
         APPINSIGHTS_INSTRUMENTATIONKEY: "c3043e63-3383-4add-a507-e0adf8588e4a"
-        TASK_SET_LAST_UPDATE: "true"
+        MI_CLIENT_ID: "43d00756-e6a0-483a-a0fb-70bfda2c9c20"
     global:
-      resourcegroup: "genesis_resource_group"
       subscriptionId: "a8140a9e-f1b0-481f-a4de-09e2ee23f7ab"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       environment: "sbox"
-      ccd_environment: "aat"
+      resourcegroup: "genesis_resource_group"
