--- a/k8s/test/releases/mi/mi-integration-service.yaml
+++ b/k8s/test/releases/mi/mi-integration-service.yaml
@@ -43,6 +43,7 @@ spec:
         DATA_SOURCE_CCD: true
         DATA_SOURCE_NOTIFY: true
         DATA_SOURCE_EIGHTBYEIGHT: true
+        DATA_SOURCE_PAYMENT: true
         GOV_UK_NOTIFY_ENABLED_CMC: true
         GOV_UK_NOTIFY_ENABLED_DIVORCE: true
         GOV_UK_NOTIFY_ENABLED_IDAM: true
