--- a/k8s/test/releases/mi/mi-integration-service.yaml
+++ b/k8s/test/releases/mi/mi-integration-service.yaml
@@ -38,6 +38,18 @@ spec:
           - notify-api-key-sscs
           - eightbyeight-api-user
           - eightbyeight-api-password
+          - payment-db-host
+          - payment-db-user
+          - payment-db-password
+          - payment-bs-db-host
+          - payment-bs-db-user
+          - payment-bs-db-password
+          - payment-fees-db-host
+          - payment-fees-db-user
+          - payment-fees-db-password
+          - payment-bar-db-host
+          - payment-bar-db-user
+          - payment-bar-db-password
       environment:
         APPINSIGHTS_INSTRUMENTATIONKEY: "350a1a4c-d746-4c63-814c-4fee92e6e07c"
         DATA_SOURCE_CCD: true
