--- a/k8s/environments/sbox/cluster-00-overlay/kustomization.yaml
+++ b/k8s/environments/sbox/cluster-00-overlay/kustomization.yaml
@@ -4,6 +4,7 @@ bases:
 - ../../../release/admin/kube-slack
 - ../../../release/admin/traefik
 - ../../../release/admin/kured
+- ../../../release/admin/keyvault-flexvol
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
