--- a/k8s/environments/sbox/common/mi/mi-data-extractor.yaml
+++ b/k8s/environments/sbox/common/mi/mi-data-extractor.yaml
@@ -8,7 +8,7 @@ metadata:
     flux.weave.works/automated: "true"
     flux.weave.works/tag.job: glob:pr-*
 spec:
-  releaseName: data-extractor
+  releaseName: mi-data-extractor
   chart:
     git: git@github.com:hmcts/shared-services-flux
     path: k8s/release/mi/mi-data-extractor-job
