--- a/k8s/environments/sbox/common/mi/mi-house-keeping-service-identity.yaml
+++ b/k8s/environments/sbox/common/mi/mi-house-keeping-service-identity.yaml
@@ -5,8 +5,8 @@ metadata:
  namespace: mi
 spec:
  type: 0
- ResourceID: /subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourceGroups/mi-sbox-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-housekeeping-service-sbox-mi
- ClientID: 43d00756-e6a0-483a-a0fb-70bfda2c9c20
+ resourceID: /subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourceGroups/mi-sbox-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-housekeeping-service-sbox-mi
+ clientID: 43d00756-e6a0-483a-a0fb-70bfda2c9c20
 
 ---
 
@@ -16,5 +16,5 @@ metadata:
   name: mi-house-keeping-service
   namespace: mi
 spec:
-  AzureIdentity: mi-house-keeping-service
-  Selector: mi-house-keeping-service
+  azureIdentity: mi-house-keeping-service
+  selector: mi-house-keeping-service
