--- a/k8s/environments/sbox/common/mi/mi-integration-service-identity.yaml
+++ b/k8s/environments/sbox/common/mi/mi-integration-service-identity.yaml
@@ -5,8 +5,8 @@ metadata:
  namespace: mi
 spec:
  type: 0
- ResourceID: /subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourceGroups/mi-sbox-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-integration-service-sbox-mi
- ClientID: c5de2886-5b81-4867-8e16-1af09f01bc5f
+ resourceID: /subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourceGroups/mi-sbox-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-integration-service-sbox-mi
+ clientID: c5de2886-5b81-4867-8e16-1af09f01bc5f
 
 ---
 
@@ -16,5 +16,5 @@ metadata:
   name: mi-integration-service
   namespace: mi
 spec:
-  AzureIdentity: mi-integration-service
-  Selector: mi-integration-service
+  azureIdentity: mi-integration-service
+  selector: mi-integration-service
