--- a/k8s/environments/sbox/common/hmi/az-devops-agent.yaml
+++ b/k8s/environments/sbox/common/hmi/az-devops-agent.yaml
@@ -15,6 +15,6 @@ spec:
     ref: master
   values:
     env:
-      AZP_URL: https://dev.azure.com/hmcts/Shared%20Services
-      AZP_POOL: hmi-pool
-      AZP_WORK: _work
+      AZP_URL: "https://dev.azure.com/hmcts/Shared%20Services"
+      AZP_POOL: "hmi-pool"
+      AZP_WORK: "_work"
