addin new secret and updating env vars

--- a/k8s/environments/sbox/common/hmi/az-devops-secret.enc.yaml
+++ b/k8s/environments/sbox/common/hmi/az-devops-secret.enc.yaml
@@ -1,11 +1,11 @@
-apiVersion: ENC[AES256_GCM,data:uPA=,iv:8FJsDqs9p1dStHRJQrGWACxCidK5rXj3JcpqTTgNC44=,tag:fx7Go7WpX+jL+XvQRpGxLA==,type:str]
-kind: ENC[AES256_GCM,data:rQQ2EwAs,iv:AwymnG/Co+QU5W+qFno/rVSdpVZYx++ziBT3Vf15dxc=,tag:/gIayo6HmMANVUonJpkn+g==,type:str]
+apiVersion: ENC[AES256_GCM,data:1rE=,iv:BS+tJPWjeqgaptxzV80pWIj3rt8/PnRu5pjiWsImNmQ=,tag:DNBw7guFxRxwfy+fnkFaoA==,type:str]
+kind: ENC[AES256_GCM,data:Lds/BMMl,iv:FnpZpmKJ0M5BU4X5ckVjK6m5TUsJvHB89fgI//mIOlc=,tag:o3YkIHm2F1/E/Kby7W1fPw==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:FkKIhcbby3rZWRYhVycZET0=,iv:iv2ZuNJWfxz1Yk1LTeiSmQsADSvC+Tu2DQILyw2U7gM=,tag:vPbATuolUVbNkMqLe0bC3g==,type:str]
-    namespace: ENC[AES256_GCM,data:Vwp9,iv:sz7q1mahnNZwmiUp+ikYlNE75b0O5JzjZB8Tdjbz1LQ=,tag:GzdDbeyQ1pdXgO2aSxUd/A==,type:str]
-type: ENC[AES256_GCM,data:gKiACXTX,iv:CU8Llx7CGA7Gp8c79dZrxb9mYrR706Ii8PtM47NdxyE=,tag:FN7SCxCd7NEDT0t3Zf91vQ==,type:str]
+    name: ENC[AES256_GCM,data:Hk0cpuTx07nBBc6c9Vo+3OQ=,iv:KVB7mjxwChiLOK1RliA90evA1FtTdl9p8Hd9zD8LcH0=,tag:8/D0cUVM0RSrmdvXWy15gw==,type:str]
+    namespace: ENC[AES256_GCM,data:RKTj,iv:l5ZvznWaqx+/6THHdu1SPDB3bxNIrMLUtbGijFKmezQ=,tag:nUIq2L/GiOZ8B5fTSqF4wA==,type:str]
+type: ENC[AES256_GCM,data:aKK/Eeyx,iv:KbOia7itSXzOASrAIn4ANjkc5v/xIQqTvkwGQ1WaY2o=,tag:ZeSuquxGcQq2h729UW1BAA==,type:str]
 data:
-    azpToken: ENC[AES256_GCM,data:8ac79xmex2M6zUjkp6epYtcTO/AOtA+doxcDoj6k86qla90/Ul7tUXMXjAiQxOqUtZcRlfGCGPvGR1PFJF75+NdL0FNx1Zvs,iv:h2kPwiiyzpy2VoSWIeXHP5WfKVEuKtL24eh8x0YJPxE=,tag:0YfX3q0dQ/pv7gIvIwwOAQ==,type:str]
+    azpToken: ENC[AES256_GCM,data:WgrOFO/QOrbDAGcXHIqXY1QC86Mp29JILGGC5MCtQzd4Db6dZFpbypXdVOh38Z2cktZTV4pYfB/mDux48C8PEshbV8POfTmb,iv:4GDA+NqhAmUKqscyJJgd/2s34jaTYMRQFMqDfyi9+Wc=,tag:ptl8KhxXud7bAsvGJRsWpw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -13,10 +13,10 @@ sops:
     -   vault_url: https://dtssharedservicessboxkv.vault.azure.net
         name: sops-key
         version: 8d3eafdc8ece4cf59030ef2dd0a2698d
-        created_at: '2020-08-17T15:36:28Z'
-        enc: Rqhtyc3qIxxoLtUBXgxHa9mtK-TDsqbbEDzagAercVjpIIhUfAkppmY4nz-6vhqMy7QNbAnzWGZaSg3IGJExD7f2uctfIxBc-quLLOmNrWDl7-D7V4eeSpv9NkS_trYMW_6J6Ey9YtsqqAoMMP85OH4D-PQrUxo94KMIaNAJMm8fFjZ5PGQ11gsCbiduviijqAy-bEuh8bsh_gGunKug0IlLRIxZREtzNCvgA2oWQAX2xJYoDjF2YR6aLd7e0M81isS58TuqjSRBJIHUFZ0R9PfOkF0H9tD1yGg2VQ1YEbm80pB6VwftqKCURury7ChT0hPaxhE7Id_nhLQtivIU4g
-    lastmodified: '2020-08-17T15:36:31Z'
-    mac: ENC[AES256_GCM,data:0n3mMg69LHYBDST3XLSw5rL5jpiGk91v15SGyBenZwwS53sNPld+MUWJ7CbR5RAaHZCDoz2hFF1W3dI4Tb26UtRamgBoH/FlTR42OX5CMRUM6NKX6O0v6qx5M5BY/m98mgLkLnLkEznZxfJzoNmXPZZ8GOPpqlA4iLn9PxDv95c=,iv:fPb3ATUh5Kj3qS4UZaEfkQ3G8cB6yAffasRBi0oexlI=,tag:hy3FXGkHFccfbPs4hark4w==,type:str]
+        created_at: '2020-08-18T11:10:06Z'
+        enc: v07t2UVt9_Qs4Qn-oLQVwmAuEZ9zXTCaCwRCqL-wSt3-nXI7TSrnPTviq8DFNDD7BP-5GNy3UfnhVpONDlS0__9ruR6lsfGtTAvCAtpeqZns14XXhakOqdJAvTIsDR-dbNbiUZBM7rd5o0QwXgLAjIO1DuENMHNyTU2rOqojL4_uecJ7RIdb9fhakxrNXzhg2u4CV-KQT9fIRhSW5MAUsUzqR_FGFexPJq55uBYwx5-YfzzsBcAjBKQoYgo7UFv2E_YRfk1HHL_JO5RyqGds22Vtj39PW5LFaKWxU9M53g9BL16-wKgfXWiPGmCMc44z008B0eSTQ4cyltVOp8olUQ
+    lastmodified: '2020-08-18T11:10:08Z'
+    mac: ENC[AES256_GCM,data:f6GuzZ6XFX0+LFaV0zGj5E4nVv82LI0v28/PqRTyzskzs5XV8WBMt73Elp+0LM8vn0/04YUGC0ox1X4IUF8SVdylgQVhtCaPzdBkaP/tnJ6YsiDYagVJTZ6IqaZy3DXcjiUYaqrUuMCVhQQS7y8BxY0wuI+T8OeAQSSc7zrjGoQ=,iv:wBNM8L0PSg8mHZSDp6DR5jkpmljGjKLoqMPQkPqH7B8=,tag:uml/R8jHsJox/59GBOMt7w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.5.0
