--- a/k8s/release/az-devops-agent/templates/az-devops-agent.yaml
+++ b/k8s/release/az-devops-agent/templates/az-devops-agent.yaml
@@ -8,7 +8,7 @@ metadata:
     version: {{ .Chart.Version }}
 spec:
   replicas: {{ .Values.replicas }}
-  servicename: {{ .Chart.Name }}
+  serviceName: {{ .Chart.Name }}
   selector:
     matchLabels:
       app: {{ .Chart.Name }}
