add missing mounts

--- a/k8s/environments/sbox/common/hmi/az-devops-agent.yaml
+++ b/k8s/environments/sbox/common/hmi/az-devops-agent.yaml
@@ -18,3 +18,11 @@ spec:
       AZP_URL: "https://dev.azure.com/hmcts"
       AZP_POOL: "hmi-pool"
       AZP_WORK: "_work"
+    volumeMounts:
+    - name: docker-socket
+      mountPath: /var/run/docker.sock
+      readOnly: false
+    volumes:
+    - name: docker-socket
+      hostPath:
+        path: /var/run/docker.sock
