--- a/k8s/release/az-devops-agent/templates/az-devops-agent.yaml
+++ b/k8s/release/az-devops-agent/templates/az-devops-agent.yaml
@@ -22,37 +22,33 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
+          {{- range $key, $value := $.Values.env }}
+          - name: {{ $key }}
+            value: {{ $value | quote }}
+          {{- end }}
           - name: AZP_TOKEN
             valueFrom:
               secretKeyRef:
                 name: vsts-agent-secret
                 key: azpToken
-          {{- range $key, $value := $.Values.env }}
+         {{- range $key, $value := .Values.extraEnv }}
           - name: {{ $key }}
             value: {{ $value | quote }}
-          {{- end }}
-volumeMounts:
-{{- if .Values.volumeMounts }}
-{{ toYaml .Values.volumeMounts | indent 10 }}
-{{ end }}
+         {{- end }}
+        volumeMounts:
+          {{- if .Values.volumeMounts }}
+          {{ toYaml .Values.volumeMounts | indent 10 }}
+          {{ end }}
         resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-     {{- if .Values.cleanRun }}
-        livenessProbe:
-          exec:
-            command:
-            - /bin/sh
-            - -c
-            - "! ls /vsts/agent/_diag | grep Worker || pgrep Agent.Worker"
-          initialDelaySeconds: 120
-          periodSeconds: 5
+          {{- toYaml .Values.resources | nindent 12 }}
+          {{- if .Values.cleanRun }}
      {{- end }}
-{{ if .Values.extraContainers }}
-{{ toYaml .Values.extraContainers | indent 6 }}
-{{ end }}
+  {{ if .Values.extraContainers }}
+  {{ toYaml .Values.extraContainers | indent 6 }}
+  {{ end }}
       volumes:
-{{ toYaml .Values.volumes | indent 8 }}
-{{ if .Values.image.imagePullSecret }}
+        {{ toYaml .Values.volumes | indent 8 }}
+        {{ if .Values.image.imagePullSecret }}
       imagePullSecrets:
         - name: {{ .Values.image.imagePullSecret }}
 {{ end }}
