--- a/k8s/release/az-devops-agent/values.yaml
+++ b/k8s/release/az-devops-agent/values.yaml
@@ -1,8 +1,8 @@
 replicas: 1
 
 image:
-  repository: ssprivatesbox.azurecr.io/hmi/azure-devops-agent
-  tag: v1.0
+  repository: ssprivatesbox.azurecr.io/azure-devops-agent
+  tag: v0.1
   pullPolicy: Always
 
 resources: {}
