fixing pull policy

--- a/k8s/release/az-devops-agent/templates/az-devops-agent.yaml
+++ b/k8s/release/az-devops-agent/templates/az-devops-agent.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        imagePullPolicy: {{ .Values.imagepullPolicy }}
         env:
           - name: AZP_TOKEN
             valueFrom:
