--- a/k8s/environments/sbox/common/hmi/az-devops-agent.yaml
+++ b/k8s/environments/sbox/common/hmi/az-devops-agent.yaml
@@ -14,7 +14,9 @@ spec:
     path: k8s/release/az-devops-agent
     ref: master
   values:
-    image: ssprivatesbox.azurecr.io/azure-devops-agent:v0.1
+    image:
+      repository: "ssprivatesbox.azurecr.io/azure-devops-agent"
+      tag: "v0.1"
     env:
       AZP_URL: "https://dev.azure.com/hmcts"
       AZP_POOL: "hmi-pool"
