--- a/k8s/environments/sbox/common/hmi/az-devops-agent.yaml
+++ b/k8s/environments/sbox/common/hmi/az-devops-agent.yaml
@@ -15,7 +15,7 @@ spec:
     ref: master
   values:
     image:
-      repository: "ssprivatesbox.azurecr.io/azure-devops-agent"
+      repository: "ssprivatesbox.azurecr.io/hmi/azure-devops-agent"
       tag: "v0.1"
     env:
       AZP_URL: "https://dev.azure.com/hmcts"
