--- a/k8s/release/hmi/hmi-wiremock/templates/hmi-wiremock.yaml
+++ b/k8s/release/hmi/hmi-wiremock/templates/hmi-wiremock.yaml
@@ -5,18 +5,22 @@ metadata:
   name: {{ .Chart.Name }}
   namespace: {{ .Release.Namespace }}
   labels:
-    chart: {{ .Chart.Name }}
-    version: {{ .Chart.Version }}
+    app.kubernetes.io/name: {{ include "hmi.name" . }}
+    helm.sh/chart: {{ include "hmi.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   replicas: {{ .Values.replicas }}
   serviceName: {{ .Chart.Name }}
   selector:
     matchLabels:
-      app: {{ .Chart.Name }}
+      app.kubernetes.io/name: {{ include "hmi.name" . }}
+      app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: {{ .Chart.Name }}
+        app.kubernetes.io/name: {{ include "hmi.name" . }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
       containers:
       - name: {{ .Chart.Name }}
