--- a/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
+++ b/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
@@ -15,7 +15,7 @@ spec:
     ref: master
   values:
     image:
-      repository: "ssprivatesbox.azurecr.io/hmi-wiremock"
+      repository: "ssprivatesbox.azurecr.io/hmi/apim-tests-wiremock"
       tag: "v0.1"
     ingress:
       annotations:
