--- a/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
+++ b/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
@@ -14,11 +14,13 @@ spec:
     path: k8s/release/hmi/hmi-wiremock
     ref: master
   values:
+    replicas: 1
     image:
       repository: "ssprivatesbox.azurecr.io/hmi/apim-tests-wiremock"
       tag: "v0.1"
       pullPolicy: Always
     ingress:
+      enabled: true
       annotations:
         kubernetes.io/ingress.class: traefik
       hosts:
