--- a/k8s/release/hmi/hmi-wiremock/templates/hmi-wiremock.yaml
+++ b/k8s/release/hmi/hmi-wiremock/templates/hmi-wiremock.yaml
@@ -1,6 +1,6 @@
 
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: {{ .Chart.Name }}
   namespace: {{ .Release.Namespace }}
