--- a/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
+++ b/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
@@ -25,5 +25,6 @@ spec:
         kubernetes.io/ingress.class: traefik
       paths:
         - /
+      tls: []
       hosts:
       - 'hmi.ss-service.core-compute-sandbox.internal'
