--- a/k8s/release/hmi/hmi-wiremock/templates/hmi-wiremock-svc.yaml
+++ b/k8s/release/hmi/hmi-wiremock/templates/hmi-wiremock-svc.yaml
@@ -2,12 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Chart.Name }}
-  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ include "hmi.name" . }}
-    helm.sh/chart: {{ include "hmi.chart" . }}
+    app.kubernetes.io/name: {{ include "hmi-wiremock.name" . }}
+    app: {{ include "hmi-wiremock.name" . }}
+    helm.sh/chart: {{ include "hmi-wiremock.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+  annotations:
+  {{- if .Values.service }}
+  {{- range $key, $value := .Values.service.annotations }}
+    {{ $key }}: {{ $value }}
+  {{- end }}
+  {{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -16,5 +22,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: {{ include "hmi.name" . }}
+    app.kubernetes.io/name: {{ include "hmi-wiremock.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
