--- a/k8s/release/hmi/hmi-wiremock/templates/hmi-wiremock.yaml
+++ b/k8s/release/hmi/hmi-wiremock/templates/hmi-wiremock.yaml
@@ -33,18 +33,26 @@ spec:
           - name: http
             containerPort: 8080
             protocol: TCP
+      {{- if eq .Values.livenessProbe.enabled true }}
         livenessProbe:
           httpGet:
-            path: /
-            port: 8080
-          initialDelaySeconds: 15
-          periodSeconds: 5
+            path: {{ .Values.livenessProbe.path }}
+            port: {{ .Values.service.port }}
+          initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+          failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
+          timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+      {{ end }}
+      {{- if eq .Values.readinessProbe.enabled true }}
         readinessProbe:
           httpGet:
-            path: /
-            port: 8080
-          initialDelaySeconds: 20
-          periodSeconds: 5
+            path: {{ .Values.readinessProbe.path }}
+            port: {{ .Values.service.port }}
+          initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+          failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
+          timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+      {{ end }}
         resources:
           {{- toYaml .Values.resources | nindent 12 }}
         env:
