--- a/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
+++ b/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
@@ -27,17 +27,17 @@ spec:
         - /
       hosts:
       - 'hmi.ss-service.core-compute-sandbox.internal'
-    readinessProbe:
-      enabled: false
-      path: "/"
-      initialDelaySeconds: 60
-      periodSeconds: 30
-      failureThreshold: 6
-      timeoutSeconds: 5
-    livenessProbe:
-      enabled: false
-      path: "/"
-      initialDelaySeconds: 60
-      periodSeconds: 30
-      failureThreshold: 6
-      timeoutSeconds: 5
+    # readinessProbe:
+    #   enabled: false
+    #   path: "/"
+    #   initialDelaySeconds: 60
+    #   periodSeconds: 30
+    #   failureThreshold: 6
+    #   timeoutSeconds: 5
+    # livenessProbe:
+    #   enabled: false
+    #   path: "/"
+    #   initialDelaySeconds: 60
+    #   periodSeconds: 30
+    #   failureThreshold: 6
+    #   timeoutSeconds: 5
