--- a/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
+++ b/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
@@ -24,6 +24,6 @@ spec:
       annotations:
         kubernetes.io/ingress.class: traefik
       paths:
-        - /
+        - /product/p0001
       hosts:
       - 'hmi.ss-service.core-compute-sandbox.internal'
