--- a/k8s/environments/sbox/common/docmosis/docmosis.yaml
+++ b/k8s/environments/sbox/common/docmosis/docmosis.yaml
@@ -4,7 +4,7 @@ metadata:
   name: docmosis
   namespace: docmosis
   annotations:
-    flux.weave.works/autoqmated: "false"
+    flux.weave.works/automated: "false"
     flux.weave.works/tag.chart-image: glob:v*
 spec:
   releaseName: docmosis
