--- a/k8s/release/admin/traefik/patches/test/cluster-00/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/test/cluster-00/traefik.yaml
@@ -7,13 +7,13 @@ spec:
   values:
     loadBalancerIP: 10.145.15.250
     dashboard:
-      domain: traefik00.service.core-compute-test.internal
+      domain: traefik00.ss-service.core-compute-test.internal
     accessLogs:
       enabled: true
     autoscaling:
       minReplicas: 1
       maxReplicas: 2
-    service:
-      annotations:
-        service.beta.kubernetes.io/azure-load-balancer-resource-group: aks-infra-test-rg
+    ssl:
+      generateTLS: true
+      defaultCN: "*.ss-service.core-compute-test.internal"
 
