--- a/k8s/release/admin/traefik/patches/test/cluster-01/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/test/cluster-01/traefik.yaml
@@ -9,13 +9,13 @@ spec:
   values:
     loadBalancerIP: 10.145.31.250
     dashboard:
-      domain: traefik01.service.core-compute-test.internal
+      domain: traefik01.ss-service.core-compute-test.internal
     accessLogs:
       enabled: true
     autoscaling:
       minReplicas: 1
       maxReplicas: 2
-    service:
-      annotations:
-        service.beta.kubernetes.io/azure-load-balancer-resource-group: aks-infra-test-rg
+    ssl:
+      generateTLS: true
+      defaultCN: "*.ss-service.core-compute-test.internal"
 
