updating kube-slack sops key

--- a/k8s/environments/test/common/secrets/kube-slack-values.enc.yaml
+++ b/k8s/environments/test/common/secrets/kube-slack-values.enc.yaml
@@ -1,22 +1,22 @@
-apiVersion: ENC[AES256_GCM,data:wow=,iv:7UVMn3Dj7k+amxRSzjRGGN92rIFizZgzfyG/vPVtSp8=,tag:7crUl1k2UFzj9uZwsULk7Q==,type:str]
+apiVersion: ENC[AES256_GCM,data:M0U=,iv:6DXV7zs/ejSbKwgWcRB9qOKRHdyHauAGjf6DSkFsn28=,tag:4qKoOreWNos+orTCgPdD/Q==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:kh3aZtJL0BmBAr5yT2xEe/kTHqyUGlfmoMURl6NqyzQwrVDXtjoDGLCeMIG2O+rg9AWMLfl7nOMvSap5rUBkwg7Hd7yDkjsCveWtrnw2lfhG3MEV6DFjQ2Ci0yBD+8UG5KNqBNWZpOTAOO7DaJpV0jb98vdDMKjdo2BfKQbm3+3TvcfIsRiBDA==,iv:v9a9HZuS+Ik8q4JQa3rc1R7LcGLMCEmeQLTVrdGAoiw=,tag:wBVSp8OYW51d579qEVIyFA==,type:str]
-kind: ENC[AES256_GCM,data:S//CemfY,iv:MwBdgDoetSK3DMgTbpN80wOFF6lET5mB+6I7BAG394I=,tag:0DfTP0GzGslvuh8CrZkzRg==,type:str]
+    values.yaml: ENC[AES256_GCM,data:1zt3zcRfocV4pkHOhR7mxZy6Po57YUFpTIq7J1u46t0OGdhfgDKCAHbswvpOccf5apSnMJzWAQeV5ZPZn6oKUYh8jsysyWaZnVB4I4cLuSUZz8d6pHRfUQnTbzMAygxkcnTaXYaTaS2eakd9wKif1dLhy75UyoxXLifm8dR+YcvVvpQcfzDvLA==,iv:66350BOixr/dfmvSqwr+vIUnYK0Mmc/n2iAxeLDpq/U=,tag:27zrjhh73W9tN1Mgd8UP0g==,type:str]
+kind: ENC[AES256_GCM,data:f5ZOx7cE,iv:XGFIB3spKEWpksnkR+3JwP+4e3hxq4sruNUU+LWP9WI=,tag:puJvlyeYC7rDE+rmioDIGA==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:QA6evAXcuAXAO2LP1w3vVWM=,iv:Rdu5trxr6RyWmk/Q+mPvL+IlU2OS07xs2pw+Uddfrv4=,tag:9PTHpLoh+n66b49Ly4C59A==,type:str]
-    namespace: ENC[AES256_GCM,data:7ptsvbE=,iv:kdi8JbdCiCGIYfnM1+Ov2hY/gM/AtCdsNWKn0iCYKx8=,tag:dqJAGfImYh1V4tFhpVQugA==,type:str]
+    name: ENC[AES256_GCM,data:TWEolMcbdXAXfewEy8z5bxo=,iv:y1/3IPEGRplB3wPGcaCB9iy7+zZpORcWmFZCYRw7d7k=,tag:nsV+j5pIRppX5o/roPDqYw==,type:str]
+    namespace: ENC[AES256_GCM,data:nlYftAQ=,iv:EMeCe1tB4n2DtL1q0B81szQGoQqWP5KcQKctrzIFprI=,tag:9oPbjJDc6aQBNJPOykDYhg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicestestkv.vault.azure.net
         name: sops-key
-        version: ff056a9e64ed4d90b2ce96b88af6f4ae
-        created_at: '2020-09-02T09:13:15Z'
-        enc: ZgA0wng1CjC3E9stzNK2Bquhnn61dVZy0FXsheaWrScNT_vnKbWn1qVbpmw4A3HDQv_OaTdTIdYEqlluXVm7XVvAX0bL7XJ-IPwhAGbzjNWnEgaSfcv1wgFMycoKEcw0LPsJuuPs-miOtAa5VVc6VBuRohkbKl172o3TFIz_28g0umxGro4wswT-1s-0AN1wRuCbAajPsDUM8Vk4wFzGl6xtWtOSqV0WhvWi7UKiPccRLAyJlKJq8Otcj6xyq0NupAlTh71Giw9s41XJltBxaIXvUCOEm76o8WNfJ7_8-edITKmDeYuWhkLUxzLwFOC6pqBwQisiY-0UjCh99VYJ7w
-    lastmodified: '2020-09-02T09:13:17Z'
-    mac: ENC[AES256_GCM,data:sTzGzW8E6RiQKkgLweeUQm5biKoak19rhFxs3oWz4BUX1L1JDLNOY+elrQ3WkR+3mdPhiuXkn3hhh0CmCBbMPxjBX2qmTxZ5MTGYqlt1T9cJvKPfWzSGEa5YIlWouS9uEVGpcHgwfa7Tkkq8eUoS7G3s8POgt3gdvue8+ZW74iw=,iv:yEKMJRQMHUs13OesfpqPu4VTq0YOTwLjb/UxWBMTp8U=,tag:h6oBxxlRKh6/uBN+NAB3rQ==,type:str]
+        version: d1c5c1736ef44f86a71cfe140d3eef49
+        created_at: '2020-09-02T11:52:07Z'
+        enc: Ok0Y44G1_HS6_goNUQqlvDRAkpCQm-UNDKjnbcpuGsXhfNXHWuGClVud6MveJbPRHOlvgg98-1cZ9z8-FCv7ijEU1y0FaM_7jFii8AIziCio0QDC1W1zeRC1xSgVn_VLRNVbZtlBMljUEJSWFvUmFjZWsBOTy8f0MzFzUOIOKIgsM-BniFsTvg2UG6ygENChkpgfBcipq0kgdW6RhuwSdAFSyqdmCumTupsFaByGqe-YiKUb3XqCIkzq5DJsALFVqwV_c-VdW0ablbVs2I9SQdvpVIOQTXLj5m5ZTS68kQ0_xxk92edMquwM8unojB4hbYD9UE-5X4VmU9IthnRolg
+    lastmodified: '2020-09-02T11:52:10Z'
+    mac: ENC[AES256_GCM,data:YFZJW4HYVYHpxJx94InlEWeGeNSOfAR0wS22RQU7Wz5dz6aqJAymZqRNcPnWWY1FDbqcjCJkeItRHovYgGme2D9h/88J8haKI8ApwGsUvrCkZIRSw54FyFgteOqANiph1C6Vrc+FPcAWscLHsWPPgAScSewPsDCFZ4vTzoKjzAk=,iv:8RDFtRJIa7+/QNMV5GgdRATMo3M6cltI2tzaCfrfjGQ=,tag:kRGx+HJBRkONFSt89jqNuw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.5.0
