--- a/k8s/environments/test/common/secrets/kube-slack-values.enc.yaml
+++ b/k8s/environments/test/common/secrets/kube-slack-values.enc.yaml
@@ -1,11 +1,11 @@
-apiVersion: ENC[AES256_GCM,data:M0U=,iv:6DXV7zs/ejSbKwgWcRB9qOKRHdyHauAGjf6DSkFsn28=,tag:4qKoOreWNos+orTCgPdD/Q==,type:str]
+apiVersion: ENC[AES256_GCM,data:YKs=,iv:OokXzW8HhmVUu3BLoevoraUUps1agEnx/3rSFZ0FNZE=,tag:k+WaQvmX4WhiPcs8yAK6wg==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:1zt3zcRfocV4pkHOhR7mxZy6Po57YUFpTIq7J1u46t0OGdhfgDKCAHbswvpOccf5apSnMJzWAQeV5ZPZn6oKUYh8jsysyWaZnVB4I4cLuSUZz8d6pHRfUQnTbzMAygxkcnTaXYaTaS2eakd9wKif1dLhy75UyoxXLifm8dR+YcvVvpQcfzDvLA==,iv:66350BOixr/dfmvSqwr+vIUnYK0Mmc/n2iAxeLDpq/U=,tag:27zrjhh73W9tN1Mgd8UP0g==,type:str]
-kind: ENC[AES256_GCM,data:f5ZOx7cE,iv:XGFIB3spKEWpksnkR+3JwP+4e3hxq4sruNUU+LWP9WI=,tag:puJvlyeYC7rDE+rmioDIGA==,type:str]
+    values.yaml: ENC[AES256_GCM,data:kO+DbVYfAu3Cx2EPFo9pG3HT8hnPuoJVu5AmHJPPMJaW2Nz0cVgJdh3hIC4EiyqBu8epEV+hXXHROEPmpkQO7IcQmYNuXt/82yw7gTpq5ChT51zrOzaSTNfX63sUDuMqylUvDq9z+n16vG1khTVqiKdUDwljN07SwnIMwjcAWjfO6sqV,iv:ZgtM5C5lpnNFB0xCWmZHCam28W4mtE0GmAGI8vanWsM=,tag:qCwhyZcX5h8FyIzBQn0KjQ==,type:str]
+kind: ENC[AES256_GCM,data:ESUP8chb,iv:4XZgWfhP9uRBQvqAy9o3RJMkXQuHnzThFtZWRLQoKKY=,tag:2ibws+6hDye1tXfywXtWfQ==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:TWEolMcbdXAXfewEy8z5bxo=,iv:y1/3IPEGRplB3wPGcaCB9iy7+zZpORcWmFZCYRw7d7k=,tag:nsV+j5pIRppX5o/roPDqYw==,type:str]
-    namespace: ENC[AES256_GCM,data:nlYftAQ=,iv:EMeCe1tB4n2DtL1q0B81szQGoQqWP5KcQKctrzIFprI=,tag:9oPbjJDc6aQBNJPOykDYhg==,type:str]
+    name: ENC[AES256_GCM,data:idLq52jj4wTNnc9MvaZiwOg=,iv:6DXavD3jPHl2EcXD1DS8QglZGOdtpmyKZ2faQ6M0a/U=,tag:cI79izsxr4eYs8QZMUgNYQ==,type:str]
+    namespace: ENC[AES256_GCM,data:qAlGdO4=,iv:qeIIAJro95ohG72D92ks6lrBQeE1gpeefId6SvIUzw8=,tag:ozzk04KJQTbdAqlIjzDkqw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -13,10 +13,10 @@ sops:
     -   vault_url: https://dtssharedservicestestkv.vault.azure.net
         name: sops-key
         version: d1c5c1736ef44f86a71cfe140d3eef49
-        created_at: '2020-09-02T11:52:07Z'
-        enc: Ok0Y44G1_HS6_goNUQqlvDRAkpCQm-UNDKjnbcpuGsXhfNXHWuGClVud6MveJbPRHOlvgg98-1cZ9z8-FCv7ijEU1y0FaM_7jFii8AIziCio0QDC1W1zeRC1xSgVn_VLRNVbZtlBMljUEJSWFvUmFjZWsBOTy8f0MzFzUOIOKIgsM-BniFsTvg2UG6ygENChkpgfBcipq0kgdW6RhuwSdAFSyqdmCumTupsFaByGqe-YiKUb3XqCIkzq5DJsALFVqwV_c-VdW0ablbVs2I9SQdvpVIOQTXLj5m5ZTS68kQ0_xxk92edMquwM8unojB4hbYD9UE-5X4VmU9IthnRolg
-    lastmodified: '2020-09-02T11:52:10Z'
-    mac: ENC[AES256_GCM,data:YFZJW4HYVYHpxJx94InlEWeGeNSOfAR0wS22RQU7Wz5dz6aqJAymZqRNcPnWWY1FDbqcjCJkeItRHovYgGme2D9h/88J8haKI8ApwGsUvrCkZIRSw54FyFgteOqANiph1C6Vrc+FPcAWscLHsWPPgAScSewPsDCFZ4vTzoKjzAk=,iv:8RDFtRJIa7+/QNMV5GgdRATMo3M6cltI2tzaCfrfjGQ=,tag:kRGx+HJBRkONFSt89jqNuw==,type:str]
+        created_at: '2020-09-02T12:12:10Z'
+        enc: gOM0aJ7VJdhCzKOFL8fKrGcB0bYysa8Cfu-EDW9Fnf20H74J1sxgbWVNN-dXXUaIM031LIKAusIXaL5Np2MFo8gGPizeUKUW9x7X-6ngNP0C0YnZkAfOnXIv6RSi8PjoqrQYJ2gxUaITQL4zDrOeaFgYOr_1w7nicJBig_3K1sknwIfYtGKkdZPas3Eg1aiUoTeCP9PKLPucTj20x_yZmnS29A9wndIZAS2BWEn-klSJGcqFB43mC0qqCEh1Iv58u5iISZQx8gptZz1H5aK4Ui04MAcq5G_tJVIAWdEbZbIGsNqlbw4imJdEbTFp81fZnKHZpinZ-DrBH2Cp4Rhjiw
+    lastmodified: '2020-09-02T12:12:12Z'
+    mac: ENC[AES256_GCM,data:V+9WpndMh+2TwvegV36lWhZStb5cimvF2K27H/eujMPdv6T6OmZHIWq2q0FW4gu0Nsa76VArzJC4pzYOUicg2Fm93f/VOSM3GRwx4GaIzcgzCzJKIXCBYlMT+aqubykIhU5Nmpz17/4Xd3ZlauJDi+ZJZFvUGUX2uzP0tv/znJo=,iv:2XO8cHBeXTKO/b+MmddFAVGc47VZR0xWva9fszl/ySE=,tag:0N4dLZ1NDdn0L5aA9P/Uxw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.5.0
